--- a/QtApps/app1/app1.ui
+++ b/QtApps/app1/app1.ui
@@ -36,6 +36,7 @@
      <string>View</string>
     </property>
     <addaction name="actionViewErrorLog"/>
+    <addaction name="actionViewSimple_Dialog"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
@@ -65,6 +66,11 @@
   <action name="actionViewErrorLog">
    <property name="text">
     <string>Error Log</string>
+   </property>
+  </action>
+  <action name="actionViewSimple_Dialog">
+   <property name="text">
+    <string>Simple Dialog</string>
    </property>
   </action>
  </widget>
