--- a/qc-proj1/mainwindow.ui
+++ b/qc-proj1/mainwindow.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>568</width>
+    <height>422</height>
+   </rect>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -11,8 +19,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>551</width>
-     <height>23</height>
+     <width>568</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
