--- a/qc-proj1/onlinesourcesheet.ui
+++ b/qc-proj1/onlinesourcesheet.ui
@@ -15,8 +15,8 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
         <number>0</number>
@@ -25,40 +25,77 @@
         <attribute name="title">
          <string>Tab 1</string>
         </attribute>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QListWidget" name="listWidget">
+           <item>
+            <property name="text">
+             <string>123</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>456</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>789</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
        </widget>
        <widget class="QWidget" name="tab_2">
         <attribute name="title">
          <string>Tab 2</string>
         </attribute>
-        <widget class="QTableWidget" name="tableWidget">
-         <property name="geometry">
-          <rect>
-           <x>110</x>
-           <y>50</y>
-           <width>421</width>
-           <height>192</height>
-          </rect>
-         </property>
-         <column>
-          <property name="text">
-           <string>c1</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>c2</string>
-          </property>
-         </column>
-         <column>
-          <property name="text">
-           <string>c3</string>
-          </property>
-         </column>
-        </widget>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QTableWidget" name="tableWidget">
+           <row>
+            <property name="text">
+             <string>1</string>
+            </property>
+           </row>
+           <column>
+            <property name="text">
+             <string>c1</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>c2</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>c3</string>
+            </property>
+           </column>
+           <item row="0" column="0">
+            <property name="text">
+             <string>123</string>
+            </property>
+           </item>
+           <item row="0" column="1">
+            <property name="text">
+             <string>456</string>
+            </property>
+           </item>
+           <item row="0" column="2">
+            <property name="text">
+             <string>789</string>
+            </property>
+           </item>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </widget>
      </item>
-     <item>
+     <item row="1" column="0">
       <widget class="QDialogButtonBox" name="buttonBox">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
