--- a/qc-proj1/onlinesourcesheet.ui
+++ b/qc-proj1/onlinesourcesheet.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Online Source Selector</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
@@ -19,7 +19,7 @@
      <item row="0" column="0">
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -51,45 +51,107 @@
         <attribute name="title">
          <string>Tab 2</string>
         </attribute>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
-          <widget class="QTableWidget" name="tableWidget">
-           <row>
-            <property name="text">
-             <string>1</string>
-            </property>
-           </row>
-           <column>
-            <property name="text">
-             <string>c1</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>c2</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>c3</string>
-            </property>
-           </column>
-           <item row="0" column="0">
-            <property name="text">
-             <string>123</string>
-            </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QTableWidget" name="tableWidget">
+             <row>
+              <property name="text">
+               <string>1</string>
+              </property>
+             </row>
+             <row>
+              <property name="text">
+               <string>Second</string>
+              </property>
+             </row>
+             <column>
+              <property name="text">
+               <string>c1</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>c2</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>c3</string>
+              </property>
+             </column>
+             <item row="0" column="0">
+              <property name="text">
+               <string>123</string>
+              </property>
+             </item>
+             <item row="0" column="1">
+              <property name="text">
+               <string>456</string>
+              </property>
+             </item>
+             <item row="0" column="2">
+              <property name="text">
+               <string>789</string>
+              </property>
+             </item>
+             <item row="1" column="0">
+              <property name="text">
+               <string>One</string>
+              </property>
+             </item>
+             <item row="1" column="1">
+              <property name="text">
+               <string>Two</string>
+              </property>
+             </item>
+             <item row="1" column="2">
+              <property name="text">
+               <string>Three</string>
+              </property>
+             </item>
+            </widget>
            </item>
-           <item row="0" column="1">
-            <property name="text">
-             <string>456</string>
-            </property>
+           <item>
+            <layout class="QVBoxLayout" name="verticalLayout">
+             <item>
+              <widget class="QCheckBox" name="checkBox_2">
+               <property name="text">
+                <string>CheckBox</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="toolButton">
+               <property name="text">
+                <string>...</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="verticalSpacer">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="checkBox">
+               <property name="text">
+                <string>CheckBox</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
-           <item row="0" column="2">
-            <property name="text">
-             <string>789</string>
-            </property>
-           </item>
-          </widget>
+          </layout>
          </item>
         </layout>
        </widget>
