--- a/qt_tab_control/tab_dialog.ui
+++ b/qt_tab_control/tab_dialog.ui
@@ -61,9 +61,9 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="second_btn">
+      <widget class="QPushButton" name="add_tab_btn">
        <property name="text">
-        <string>Second Button</string>
+        <string>Add Tab</string>
        </property>
       </widget>
      </item>
