--- a/qt_tab_control/mainwindow.ui
+++ b/qt_tab_control/mainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>28</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -30,6 +30,7 @@
     <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
     <addaction name="actionOpen_Tab_Dialog"/>
+    <addaction name="actionOpen_Tab_Too_Dialog"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
     <addaction name="separator"/>
@@ -83,6 +84,11 @@
     <string>Open Tab Dialog</string>
    </property>
   </action>
+  <action name="actionOpen_Tab_Too_Dialog">
+   <property name="text">
+    <string>Open Tab Too Dialog</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections>
@@ -93,8 +99,8 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>399</x>
-     <y>299</y>
+     <x>-1</x>
+     <y>-1</y>
     </hint>
     <hint type="destinationlabel">
      <x>399</x>
