--- a/qt_tab_control/tabdialogtoo.ui
+++ b/qt_tab_control/tabdialogtoo.ui
@@ -37,9 +37,9 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tab_list">
       <attribute name="title">
        <string>List</string>
       </attribute>
@@ -49,7 +49,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab_2">
+     <widget class="QWidget" name="tab_tree">
       <attribute name="title">
        <string>Tree</string>
       </attribute>
@@ -62,6 +62,16 @@
           </property>
          </column>
         </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_tree_view">
+      <attribute name="title">
+       <string>Tree View</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_4">
+       <item>
+        <widget class="QTreeView" name="treeView"/>
        </item>
       </layout>
      </widget>
