F/yurik/qt tab control (#4)
* Add eol

* Update ammeraal/1.1/CMakeLists.txt

To compile in Linux (Makefile generator)

* Add qt_tab_control/

* Add qc-proj1/

* Update qc-proj1

Changes to be committed:
modified:   qc-proj1/CMakeLists.txt
modified:   qc-proj1/mainwindow.cpp
modified:   qc-proj1/mainwindow.h
modified:   qc-proj1/mainwindow.ui
new file:   qc-proj1/onlinesourcesheet.cpp
new file:   qc-proj1/onlinesourcesheet.h
new file:   qc-proj1/onlinesourcesheet.ui

* Update

* Add qc-proj1/imagegriddialog

* Update

Changes to be committed:
new file:   README.md
modified:   mainwindow.ui
modified:   qc-proj1_en_US.ts

* WIP

Changes to be committed:
modified:   CMakeLists.txt
new file:   aboutdialog.cpp
new file:   aboutdialog.h
new file:   aboutdialog.ui
modified:   mainwindow.cpp
modified:   mainwindow.h
modified:   mainwindow.ui
modified:   qc-proj1_en_US.ts

* Add QtVsTools/html_renderer_q5

* Add qt_html_renderer project

* Add MainWindow::on_actionOpen_Renderer_triggered

Changes to be committed:
modified:   qt_html_renderer/mainwindow.cpp
modified:   qt_html_renderer/mainwindow.h

* Show About Qt message

- use qstring formatting
- use message dialog

* Add QTextBrowser (WIP)

* Update html_renderer_q5 project

Added .clang-format

* Merge from upstream

---------

Co-authored-by: Yury Kuznetsov <yyk99@kestrel.home>
Co-authored-by: Yuri Kuznetsov <yyk@plein-2>

--- a/qt_html_renderer/mainwindow.ui
+++ b/qt_html_renderer/mainwindow.ui
@@ -6,18 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>621</width>
-    <height>397</height>
+    <width>634</width>
+    <height>581</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>621</width>
-    <height>397</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>Main Window ...</string>
+   <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
@@ -25,47 +19,29 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>621</width>
-     <height>23</height>
+     <width>634</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionSelect_Online_Source"/>
-    <addaction name="actionImage_Grid"/>
+    <addaction name="actionOpen_Renderer"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
-   <widget class="QMenu" name="menuHelp">
-    <property name="title">
-     <string>Help</string>
-    </property>
-    <addaction name="actionAbout"/>
-   </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionSelect_Online_Source">
+  <action name="actionOpen_Renderer">
    <property name="text">
-    <string>Select Online Source</string>
+    <string>Open Renderer</string>
    </property>
   </action>
   <action name="actionExit">
    <property name="text">
     <string>Exit</string>
-   </property>
-  </action>
-  <action name="actionImage_Grid">
-   <property name="text">
-    <string>Image Grid</string>
-   </property>
-  </action>
-  <action name="actionAbout">
-   <property name="text">
-    <string>About...</string>
    </property>
   </action>
  </widget>
@@ -82,8 +58,8 @@
      <y>-1</y>
     </hint>
     <hint type="destinationlabel">
-     <x>257</x>
-     <y>299</y>
+     <x>316</x>
+     <y>290</y>
     </hint>
    </hints>
   </connection>
