--- a/table_view/table_view/main_dialog.ui
+++ b/table_view/table_view/main_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>MainDialog</class>
+ <widget class="QDialog" name="MainDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
